# win32more-gi

./: README.md  pyproject.toml
gi/repository/: Adw.py  GLib.py  Gdk.py  Gio.py  Gtk.py  Pango.py  __compat__.py  __init__.py
